# rust-webrtc-p2p-example

./: README.md  watch.sh
browser-webrtc/: Cargo.toml
browser-webrtc/src/: boxfn.rs  closure.rs  data_receiver.rs  data_sender.rs  lib.rs  local_media.rs  media_receiver.rs  media_sender.rs  media_view.rs  receiver.rs  rtc_configuration.rs  sender.rs  server.rs  websocket.rs
client/: Cargo.toml  index.html
client/src/: app.rs  main.rs  receiver.rs  receiver_builder.rs  receivers_list.rs  sender.rs  sender_builder.rs  senders_list.rs  server.rs  server_builder.rs  servers_list.rs  signal_ext.rs
server/: Cargo.toml
server/src/: app.rs  channel.rs  main.rs  server.rs  server_data.rs  socket.rs  socket_sender.rs
signaling-protocol/: Cargo.toml
signaling-protocol/src/: lib.rs
