[package]
name = "browser-webrtc"
version = "0.0.1"
edition = "2018"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
async-std = "1.10"
bincode = "1.3"
js-sys = "0.3.53"
log = "0.4.14"
serde = "1.0"
thiserror = "1.0"
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.26"

[dependencies.web-sys]
version = "0.3.54"
features = [
    "BinaryType",
    "Document",
    "HtmlVideoElement",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MessageEvent",
    "Navigator",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelType",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcIceServer",
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcRtpSender",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSignalingState",
    "RtcTrackEvent",
    "TrackEvent",
    "WebSocket",
    "Window",
]

[dependencies.signaling-protocol]
path = "../signaling-protocol"
