[package]
name = "client"
version = "0.0.1"
edition = "2018"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-std = "1.10"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
js-sys = "0.3.53"
log = "0.4.14"
sycamore = "0.6.0"
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.26"

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dependencies.web-sys]
version = "0.3.54"
features = [
    "Document",
    "Element",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "MouseEvent",
    "Window",
]

[dependencies.browser-webrtc]
path = "../browser-webrtc"

[features]
default = ["wee_alloc"]
