[package]
name = "server"
version = "0.0.1"
edition = "2018"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = "3.0.0-beta.4"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.14"
thiserror = "1.0"
tokio-tungstenite = "0.15.0"

[dependencies.tokio]
version = "1.11.0"
features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "sync",
]

[dependencies.signaling-protocol]
path = "../signaling-protocol"
